# personal-diary-tui

./: Cargo.toml  README.md
src/: diary_entry.rs  diary_state.rs  main.rs  ui.rs
