[package]
name = "personal_diary"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
futures = "0.3.30"
ratatui = "0.28.1"
reqwest = { version = "0.12.8", features = ["json", "stream"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
unicode-width = "0.2.0"
